<resources>

    <string name="app_name">Video</string>

    <string name="menu_bottom_navigation_home">Home</string>
    <string name="menu_bottom_navigation_search">Search</string>
    <string name="menu_bottom_navigation_user_content">Content</string>
    <string name="menu_bottom_navigation_settings">Settings</string>

    <string name="menu_video_dismiss">Dismiss</string>
    <string name="menu_video_share">Share</string>
    <string name="menu_video_report">Report</string>
    <string name="menu_video_play_now">Play Now</string>
    <string name="menu_video_play_next">Play Next</string>
    <string name="menu_video_add_to_queue">Add to Queue</string>
    <string name="menu_video_add_to_watch_list">Add to Watch List</string>

    <string name="menu_video_queue_remove_from_queue">Remove from Queue</string>
    <string name="menu_video_queue_add_to_watch_list">Add to Watch List</string>
    <string name="menu_video_queue_share">Share</string>

    <string name="video_info_button_like">Like</string>
    <string name="video_info_button_dislike">Dislike</string>
    <string name="video_info_button_share">Share</string>
    <string name="video_info_subtitle_published">Published</string>
    <string name="video_info_subtitle_category">Category</string>
    <string name="video_info_subtitle_tags">Tags</string>
    <string name="video_info_subtitle_provider">Provider</string>

    <string name="button_subscribe">Subscribe</string>
    <string name="button_unsubscribe">Unsubscribe</string>

    <string name="channel_info_header_about">About</string>
    <string name="channel_info_subtitle_created">Created</string>
    <string name="channel_info_subtitle_last_updated">Last Updated</string>

    <string name="channel_header_subscriber_count">Subscribers</string>
    <string name="channel_header_video_view_count">Video Views</string>

    <string name="search_hint">Search</string>

    <string name="settings_title">Settings</string>

    <string name="service_provider_list_toolbar_title">Service Providers</string>
    <string name="service_provider_list_add_new_label">Add New</string>
    <string name="service_provider_list_empty_text">There are no Service Providers. Add one to begin watching videos.</string>

    <string name="new_service_provider_toolbar_title">Add Service</string>
    <string name="new_service_provider_button_add">Add</string>
    <string name="new_service_provider_button_sign_in">Sign In</string>
    <string name="new_service_provider_description_optional_sign_in">Service Provider was added. Sign In for more content.</string>
    <string name="new_service_provider_description_required_sign_in">Sign In required to add service provider.</string>
    <string name="new_service_provider_hint">example.com</string>
    <string name="new_service_provider_label">Service Provider URI</string>
    <string name="new_service_provider_error_empty">Service Provider URI must not be empty.</string>
    <string name="new_service_provider_error_invalid">Enter a valid Service Provider URI.</string>
    <string name="new_service_provider_error_no_api">The entered URI does not implement the Service Provider API.</string>

    <string name="channel_default_toolbar_title">Channel</string>

    <string name="settings_group_title_content">Content</string>
    <string name="settings_group_title_about">About</string>
    <string name="settings_item_title_services">Services</string>
    <string name="settings_item_title_add_service">Add Service</string>
    <string name="settings_item_title_app">App Info</string>
    <string name="settings_item_title_source_code">Source Code</string>
    <string name="settings_item_title_license">License</string>
    <string name="settings_item_title_open_source_licenses">Open Source Licenses</string>

    <string name="home_empty_text">There are no videos available. Try adding a Service Provider to load more videos.</string>
    <string name="home_add_service_provider_button">Add Service Provider</string>

    <string name="uri_unsupported_message">Unsupported Content Type</string>

</resources>