<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/newServiceProviderAppBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/newServiceProviderToolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:title="@string/new_service_provider_toolbar_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/newServiceProviderProgressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newServiceProviderAppBarLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newServiceProviderTextInputLayout"
        style="@style/TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_horizontal_default"
        android:layout_marginEnd="@dimen/spacing_horizontal_default"
        android:hint="@string/new_service_provider_hint"
        app:layout_constraintBottom_toTopOf="@+id/newServiceProviderMainActionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newServiceProviderAppBarLayout"
        app:layout_constraintVertical_bias="0.25">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newServiceProviderTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/newServiceProviderDescriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_horizontal_default"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_horizontal_default"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="3"
        android:singleLine="false"
        android:text="@string/new_service_provider_description_required_sign_in"
        android:textAppearance="@style/TextAppearance.Body.Subtle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newServiceProviderTextInputLayout" />

    <Button
        android:id="@+id/newServiceProviderSecondaryActionButton"
        style="@style/DefaultButton"
        android:layout_marginBottom="@dimen/spacing_large"
        android:text="@string/new_service_provider_button_sign_in"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/newServiceProviderMainActionButton"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/newServiceProviderMainActionButton"
        style="@style/DefaultButton"
        android:layout_marginBottom="@dimen/spacing_large"
        android:enabled="false"
        android:text="@string/new_service_provider_button_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/newServiceProviderSecondaryActionButton" />

</androidx.constraintlayout.widget.ConstraintLayout>