<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/serviceProviderListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/recyclerview_default_bottom_padding"
        android:visibility="gone"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <TextView
        android:id="@+id/serviceProviderListEmptyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/spacing_horizontal_default"
        android:layout_marginEnd="@dimen/spacing_horizontal_default"
        android:gravity="center_horizontal"
        android:singleLine="false"
        android:text="@string/service_provider_list_empty_text"
        android:textAppearance="@style/TextAppearance.SubHeader" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/serviceProviderListAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/serviceProviderListToolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:title="@string/service_provider_list_toolbar_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/serviceProviderListFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:text="@string/service_provider_list_add_new_label"
        app:icon="@drawable/ic_fab_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>