<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/videoInfoContainerLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/spacing_horizontal_default"
    android:paddingTop="@dimen/spacing_vertical_default"
    android:paddingEnd="@dimen/spacing_horizontal_default"
    android:paddingBottom="@dimen/spacing_vertical_default">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.SubHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Title" />

    <TextView
        android:id="@+id/viewCountTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xxsmall"
        android:textAppearance="@style/TextAppearance.Body2.Subtle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        tools:text="250k" />

    <Button
        android:id="@+id/likeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_thumbs_up"
        android:drawablePadding="@dimen/spacing_xxsmall"
        android:drawableTint="@color/button_action_color"
        android:text="@string/video_info_button_like"
        android:textAppearance="@style/TextAppearance.Button.Subtle"
        android:textColor="@color/text_action_color"
        app:layout_constraintEnd_toStartOf="@+id/dislikeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewCountTextView" />

    <Button
        android:id="@+id/dislikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_thumbs_down"
        android:drawablePadding="@dimen/spacing_xxsmall"
        android:drawableTint="@color/button_action_color"
        android:text="@string/video_info_button_dislike"
        android:textAppearance="@style/TextAppearance.Button.Subtle"
        android:textColor="@color/text_action_color"
        app:layout_constraintEnd_toStartOf="@+id/shareButton"
        app:layout_constraintStart_toEndOf="@+id/likeButton"
        app:layout_constraintTop_toBottomOf="@+id/viewCountTextView" />

    <Button
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_share"
        android:drawablePadding="@dimen/spacing_xxsmall"
        android:drawableTint="@color/button_action_color"
        android:text="@string/video_info_button_share"
        android:textAppearance="@style/TextAppearance.Button.Subtle"
        android:textColor="@color/text_action_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dislikeButton"
        app:layout_constraintTop_toBottomOf="@+id/viewCountTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>